--- a/packages/components/form-field/src/styles/index.module.scss
+++ b/packages/components/form-field/src/styles/index.module.scss
@@ -10,6 +10,11 @@
 
   .content {
     @include shared.form-field-container;
+    @include shared.focus-base;
+
+    &:focus-within {
+      @include shared.focus-active;
+    }
   }
 
   .validation_message {
