--- a/packages/components/input/src/styles/index.module.scss
+++ b/packages/components/input/src/styles/index.module.scss
@@ -9,6 +9,10 @@
 
 // When not inside form field, has own border, etc
 .standalone {
-  @include form-field.form-field-container;
-  @include form-field.skins;
+  @include form-field.standalone-input;
+  @include form-field.focus-base;
+
+  &:focus {
+    @include form-field.focus-active;
+  }
 }
